[gd_scene load_steps=16 format=3 uid="uid://drg4sycg3d4n8"]

[ext_resource type="Script" path="res://Script/radio/label_reponse.gd" id="1_mme17"]
[ext_resource type="AudioStream" uid="uid://cvwdn4804x6na" path="res://Assets/sound/bruitage-bouton.wav" id="2_6xwcg"]
[ext_resource type="FontFile" uid="uid://cmwxyvsrocy0j" path="res://Assets/Fonts/Technology.ttf" id="3_qsy7c"]
[ext_resource type="Shader" path="res://Script/Shader/Hover.gdshader" id="4_g1bjy"]
[ext_resource type="Texture2D" uid="uid://ck6xt4n04h604" path="res://Assets/Djallel/Bouton fleche.png" id="5_egfgi"]
[ext_resource type="Script" path="res://Script/buttons/Boutons_menu_pause/fleche_haut.gd" id="5_qnwmt"]
[ext_resource type="Script" path="res://Script/buttons/Boutons_menu_pause/fleche_bas.gd" id="6_tkjuk"]
[ext_resource type="Texture2D" uid="uid://bpcg3e1fegjiq" path="res://Assets/Djallel/Bouton OK.png" id="8_64jpx"]
[ext_resource type="Script" path="res://Script/buttons/Boutons_menu_pause/ok.gd" id="8_lcjjh"]

[sub_resource type="LabelSettings" id="LabelSettings_u734q"]
font_size = 25
font_color = Color(0.207843, 0.219608, 0.478431, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nyjka"]
shader = ExtResource("4_g1bjy")
shader_parameter/brightness_multiplier = 1.5
shader_parameter/transition_speed = 5.0
shader_parameter/is_hovered = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f7ifs"]
shader = ExtResource("4_g1bjy")
shader_parameter/brightness_multiplier = 1.5
shader_parameter/transition_speed = 5.0
shader_parameter/is_hovered = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_q851q"]
shader = ExtResource("4_g1bjy")
shader_parameter/brightness_multiplier = 1.5
shader_parameter/transition_speed = 5.0
shader_parameter/is_hovered = false

[sub_resource type="LabelSettings" id="LabelSettings_0oc6q"]
font = ExtResource("3_qsy7c")
font_size = 50
font_color = Color(0.207843, 0.219608, 0.478431, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5gt8e"]
font = ExtResource("3_qsy7c")
font_size = 50
font_color = Color(0.207843, 0.219608, 0.478431, 1)

[node name="label_reponse" type="Control"]
process_mode = 3
z_index = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mme17")

[node name="Click" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
position = Vector2(305, -136)
stream = ExtResource("2_6xwcg")
volume_db = 10.0

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.207843, 0.219608, 0.478431, 1)

[node name="Label" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Rep1" type="Label" parent="Label"]
layout_mode = 0
offset_right = 44.0
offset_bottom = 26.0
text = "C'était quoi ce
 bruit, ça va ?"
label_settings = SubResource("LabelSettings_u734q")

[node name="Buttons" type="Control" parent="."]
z_index = 10
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Fleche_gauche" type="TextureButton" parent="Buttons"]
process_mode = 3
z_index = 1
material = SubResource("ShaderMaterial_nyjka")
layout_mode = 0
offset_left = -575.0
offset_top = -298.0
offset_right = -471.0
offset_bottom = -106.0
rotation = 3.14159
scale = Vector2(0.6, 0.6)
pivot_offset = Vector2(54.37, 94.35)
texture_normal = ExtResource("5_egfgi")
script = ExtResource("5_qnwmt")

[node name="Fleche_droite" type="TextureButton" parent="Buttons"]
process_mode = 3
z_index = 1
material = SubResource("ShaderMaterial_f7ifs")
layout_mode = 0
offset_left = -572.0
offset_top = -86.0
offset_right = -468.0
offset_bottom = 106.0
scale = Vector2(0.6, 0.6)
pivot_offset = Vector2(53.57, 97.755)
texture_normal = ExtResource("5_egfgi")
script = ExtResource("6_tkjuk")

[node name="ok" type="TextureButton" parent="Buttons"]
z_index = 1
material = SubResource("ShaderMaterial_q851q")
layout_mode = 0
offset_left = -572.0
offset_top = -148.0
offset_right = -469.0
offset_bottom = -45.0
scale = Vector2(0.6, 0.6)
pivot_offset = Vector2(51.5, 52.185)
texture_normal = ExtResource("8_64jpx")
script = ExtResource("8_lcjjh")

[node name="FlecheG" type="Label" parent="."]
layout_mode = 0
offset_left = -330.0
offset_top = -264.0
offset_right = -296.0
offset_bottom = -197.0
rotation = 1.5708
text = "<"
label_settings = SubResource("LabelSettings_0oc6q")

[node name="FlecheD" type="Label" parent="."]
layout_mode = 0
offset_left = -330.0
offset_top = 222.0
offset_right = -296.0
offset_bottom = 289.0
rotation = 1.5708
text = ">"
label_settings = SubResource("LabelSettings_5gt8e")

[node name="Marker" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="M1" type="Marker2D" parent="Marker"]
position = Vector2(-428, -180)

[node name="M2" type="Marker2D" parent="Marker"]
position = Vector2(-428, -90)

[node name="M3" type="Marker2D" parent="Marker"]
position = Vector2(-428, 0)

[node name="M4" type="Marker2D" parent="Marker"]
position = Vector2(-428, 90)

[node name="M5" type="Marker2D" parent="Marker"]
position = Vector2(-428, 180)

[connection signal="pressed" from="Buttons/Fleche_gauche" to="Buttons/Fleche_gauche" method="_on_pressed"]
[connection signal="pressed" from="Buttons/Fleche_droite" to="Buttons/Fleche_droite" method="_on_pressed"]
[connection signal="pressed" from="Buttons/ok" to="Buttons/ok" method="_on_pressed"]
